--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                 <div class="about_left">
                     <h2>인터넷우체국이란?</h2>
                     <h1>ABOUT US</h1>
-                    <p class="about_txt_1">인터넷우체국(www.epost.go.kr)은 고객이 직접 우체국을 방문하지 않고도<br>인터넷접속을 통하여 <span style="color:#ee271d">소포, ems(국제특송), 쇼핑, e-그린우편, 경조카드</span> 등의<br>우편서비스를 언제나 어디서나 편리하게 이용할 수 있도록 구축해 놓은<br><span style="color:
-                    #ee271d">온라인상의 우체국입니다.</span></p>
+                    <p class="about_txt_1">인터넷우체국(www.epost.go.kr)은 고객이 직접 우체국을 방문하지 않고도<br>인터넷접속을 통하여 <span style="color:#ee271d">소포, ems(국제특송), 쇼핑, e-그린우편, 경조카드</span> 등의<br>우편서비스를 언제나 어디서나 편리하게 이용할 수 있도록 구축해 놓은<span style="color:
+                    #ee271d"> 온라인상의 우체국입니다.</span></p>
                     <p class="about_txt_2">스마트폰 앱과 모바일웹(m.epost.go.kr)에서도 소포, ems(국제특송), 쇼핑, 경조카드, 배달조회 등의 우편서비스를 이용할 수 있습니다.</p>
                 </div>
                 <div class="about_img">
@@ -388,15 +388,308 @@
             </div>
         </section>
         <section class="shop">
-
+            <div class="inner">
+                <h1>우체국 상품</h1>
+                <div class="tab_wrap">
+                    <ul class="tabs">
+                        <li class="tab-link current" data-tab="tab-1">쇼핑<span></span></li>
+                        <li class="tab-link" data-tab="tab-2">축하카드<span></span></li>
+                        <li class="tab-link" data-tab="tab-3">우표<span></span></li>
+                        <li class="tab-link" data-tab="tab-4">알뜰폰<span></span></li>
+                    </ul>
+                    <div id="tab-1" class="tab-content current">
+                        <ul>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/shopping_1.png" alt="완도전복">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>[완도전복] 특대 9~11미 1kg</h2>
+                                    <h3><span>41,800원</span> 29,800원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/shopping_2.png" alt="상주토성곶감">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>[상주토성곶감] 반건시 1.2kg</h2>
+                                    <h3><span>45,000원</span> 24,650원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/shopping_3.png" alt="한우불고기, 차돌박이">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>[특가판매] 한우불고기, 차돌박이</h2>
+                                    <h3><span>9,760원</span> 8,740원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/shopping_4.png" alt="순천 로메인 상추">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>[순창상추] 명품 로메인 상추 400g</h2>
+                                    <h3><span>9,900원</span> 6,900원</h3>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="tab-2" class="tab-content">
+                        <ul>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/card_1.png" alt="축하카드-전통의숨결">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>전통의 숨결</h2>
+                                    <h3>1,500원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/card_2.png" alt="축하카드-행복 속으로">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>행복속으로</h2>
+                                    <h3>2,000원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/card_3.png" alt="축하카드-웃음꽃가득">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>웃음꽃가득</h2>
+                                    <h3>1,500원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/card_4.png" alt="축하카드-사랑해요">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>사랑해요</h2>
+                                    <h3>1,500원</h3>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="tab-3" class="tab-content">
+                        <ul>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/stamp_1.png" alt="우표-뽀롱뽀롱 뽀로로">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>뽀롱뽀롱 뽀로로</h2>
+                                    <h3>860원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/stamp_2.png" alt="우표-채소꽃">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>채소꽃</h2>
+                                    <h3>860원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/stamp_3.png" alt="우표-대한민국 최초 달 궤도선 다누리">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>대한민국 최초 달 궤도선 다누리</h2>
+                                    <h3>430원</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="tab_img_wrap">
+                                    <img src="images/shop/stamp_4.png" alt="우표-나만의우표">
+                                </div>
+                                <div class="tab_txt_wrap">
+                                    <h2>개인사진을 이용하여 직접 만드는</h2>
+                                    <h3>나만의 우표</h3>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="tab-4" class="tab-content">
+                        <ul>
+                            <li>
+                                <h2>갤럭시A23</h2>
+                                <div class="phone_wrap">
+                                    <img src="images/shop/phone_1.jpg" alt="알뜰폰-갤럭시A23">
+                                    <div class="phone_wrap_1">
+                                        <p>납부요금(예상)</p>
+                                        <p>기기원금</p>
+                                        <p>사업자명</p>
+                                        <p>기기구분</p>
+                                        <p>요금제명</p>
+                                        <p>기본료</p>
+                                    </div>
+                                    <div class="phone_wrap_2">
+                                        <p>월 17,039원 부터</p>
+                                        <p>374,000원</p>
+                                        <p>인스코비</p>
+                                        <p>4G LTE</p>
+                                        <p>우체국500분 2G(후불)</p>
+                                        <p>3,600원</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <h2>팬택 폴더 (176000)</h2>
+                                <div class="phone_wrap">
+                                    <img src="images/shop/phone_2.jpg" alt="알뜰폰-팬택 폴더">
+                                    <div class="phone_wrap_1">
+                                        <p>납부요금(예상)</p>
+                                        <p>기기원금</p>
+                                        <p>사업자명</p>
+                                        <p>기기구분</p>
+                                        <p>요금제명</p>
+                                        <p>기본료</p>
+                                    </div>
+                                    <div class="phone_wrap_2">
+                                        <p>월 10,325원 부터</p>
+                                        <p>176,000원</p>
+                                        <p>한국케이블텔레콤</p>
+                                        <p>4G LTE</p>
+                                        <p>우체국티플데이터 2,5G(후불)</p>
+                                        <p>4,000원</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section class="news"></section>
-        <section class="service"></section>
+        <section class="news">
+            <div class="inner">
+                <div class="news_wrap">
+                    <div class="news_title">
+                        <h1><p>e-post</p>NEWS</h1>
+                    </div>
+                    <div class="news_content">
+                        <ul>
+                            <li>
+                                <h3>우체국 금융시스템 지연에 따른 우체국 일부 서비스 지연 안내</h3>
+                                <h4>2023.05.08</h4>
+                            </li>
+                            <li>
+                                <h3>우체국 모바일 금융의 새로운 이름, 잇다</h3>
+                                <h4>2023.04.28</h4>
+                            </li>
+                            <li>
+                                <h3>국제특급우편 EMS 할인 이벤트 연장</h3>
+                                <h4>2023.04.25</h4>
+                            </li>
+                            <li>
+                                <h3>근로자의 날(2023.5.1) 우체국 업무 안내</h3>
+                                <h4>2023.04.14</h4>
+                            </li>
+                            <li>
+                                <h3>강릉 산불 피해자를 위한 배달지연 안내</h3>
+                                <h4>2023.04.14</h4>
+                            </li>
+                            <li>
+                                <h3>튀르키예 구호물품 접수 중지</h3>
+                                <h4>2023.03.02</h4>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="service">
+            <div class="inner">
+                <h1>고객 서비스</h1>
+                <ul>
+                    <li>
+                        <img src="images/banner_btn_icon_1.jpg" alt="">
+                        <p>우편번호 찾기</p>
+                    </li>
+                    <li>
+                        <img src="images/banner_btn_icon_n2.jpg" alt="">
+                        <p>집배코드 부여</p>
+                    </li>
+                    <li>
+                        <img src="images/banner_btn_icon_3.jpg" alt="">
+                        <p>이용안내</p>
+                    </li>
+                    <li>
+                        <img src="images/banner_btn_icon_n4.jpg" alt="">
+                        <p>우편번호 찾기</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
-        <div class="f_top"></div>
-        <div class="f_mid"></div>
-        <div class="f_bot"></div>
+        <div class="f_top">
+            <div class="inner">
+                <h2>우편고객센터</h2>
+                <div class="f_top_txt">
+                    <div class="top_left">
+                        <h3>1588-1300 <span>(발신자부담)</span></h3>
+                        <p>평일 09:00 ~ 18:00</p>
+                        <p>토요일/공휴일 휴무</p>
+                    </div>
+                    <div class="top_right">
+                        <h3>82-42-609-4295 <span>(해외고객)</span></h3>
+                        <p>평일 09:00 ~ 18:00</p>
+                        <p>토요일/공휴일 휴무</p>
+                    </div>
+                </div>
+                <div class="f_top_icon">
+                    <a href="javascript:void(0)">
+                        <img src="images/pc_main_icon.png" alt="채팅상담 아이콘">
+                    </a>
+                    <a href="javascript:void(0)">
+                        <img src="images/icon_m_talk_ver2.png" alt="챗봇 아이콘">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="f_mid">
+            <div class="inner">
+                <a href="#">인터넷우체국소개</a>
+                <a href="#">전국 우체국 이용안내</a>
+                <a href="#">이용약관</a>
+                <a href="#">개인정보처리방침</a>
+                <a href="#">웹접근성정책</a>
+                <a href="#">
+                    <img src="images/footer-img.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="f_bot">
+            <div class="inner">
+                <div class="f_bot_txt">
+                    <p>
+                        <span>우편고객센터 : 1588-1300(발신자부담) | 이메일 : help@posa.or.kr</span>
+                    </p>
+                    <p>
+                        <span>58323 전라남도 나주시 정보화길 1 (빛가람동) | 사업자등록번호 : 206-83-02050 (문경자)</span>
+                    </p>
+                    <p>
+                        Copyright(c) 2016. ePOST all rights reserved.
+                    </p>
+                </div>
+                <div class="f_bot_icon">
+                    <a href="#">
+                        <img src="images/ISMS-P.png" alt="인증마크1">
+                    </a>
+                    <a href="#">
+                        <img src="images/bottom_mark_img_3.gif" alt="인증마크2">
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
