--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="inner">
             <h1 class="logo"><a href="#">
-                <img src="images/logo.png" alt="우체국 메인로고">
+                <img src="images/mainlogo.png" alt="우체국 메인로고">
             </a>
             </h1>
             <ul class="mainmenu">
